--- a/src/index.html
+++ b/src/index.html
@@ -20,41 +20,43 @@
     </div>
 
     <main>
-      <div class="box">
-        <div class="box-item">
-          <i class="bi bi-cloud-hail"></i>
-          <h2>Sunday</h2>
-          <p>13° / 10°</p>
-        </div>
-        <div class="box-item">
-          <i class="bi bi-cloud-sun"></i>
-          <h2>Monday</h2>
-          <p>37° / 23°</p>
-        </div>
-        <div class="box-item">
-          <i class="bi bi-cloud-rain"></i>
-          <h2>Tuesday</h2>
-          <p>33° / 30°</p>
-        </div>
-        <div class="box-item">
-          <i class="bi bi-cloud-snow"></i>
-          <h2>Wednesday</h2>
-          <p>22° / 29°</p>
-        </div>
-        <div class="box-item">
-          <i class="bi bi-cloud-lightning-rain"></i>
-          <h2>Thursday</h2>
-          <p>36° / 33°</p>
-        </div>
-        <div class="box-item">
-          <i class="bi bi-cloud-sun"></i>
-          <h2>Friday</h2>
-          <p>42° / 31°</p>
-        </div>
-        <div class="box-item">
-          <i class="bi bi-clouds-fill"></i>
-          <h2>Saturday</h2>
-          <p>47° / 35°</p>
+      <div class="container">
+        <div class="box">
+          <div class="box-item">
+            <i class="bi bi-cloud-hail"></i>
+            <h2>Sunday</h2>
+            <p>13° / 10°</p>
+          </div>
+          <div class="box-item">
+            <i class="bi bi-cloud-sun"></i>
+            <h2>Monday</h2>
+            <p>37° / 23°</p>
+          </div>
+          <div class="box-item">
+            <i class="bi bi-cloud-rain"></i>
+            <h2>Tuesday</h2>
+            <p>33° / 30°</p>
+          </div>
+          <div class="box-item">
+            <i class="bi bi-cloud-snow"></i>
+            <h2>Wednesday</h2>
+            <p>22° / 29°</p>
+          </div>
+          <div class="box-item">
+            <i class="bi bi-cloud-lightning-rain"></i>
+            <h2>Thursday</h2>
+            <p>36° / 33°</p>
+          </div>
+          <div class="box-item">
+            <i class="bi bi-cloud-sun"></i>
+            <h2>Friday</h2>
+            <p>42° / 31°</p>
+          </div>
+          <div class="box-item">
+            <i class="bi bi-clouds-fill"></i>
+            <h2>Saturday</h2>
+            <p>47° / 35°</p>
+          </div>
         </div>
       </div>
     </main>
